fix for wrapping long menu item names

--- a/django/core/static/css/style.css
+++ b/django/core/static/css/style.css
@@ -183,6 +183,7 @@ button.menu-button i {
     margin-top: 2px;
     margin-bottom: 2px;
     text-decoration: none;
+    white-space: nowrap;
     font-size: 1.2em;
 }
 
@@ -202,6 +203,13 @@ div#content.active {
 
 p.intro-paragraph {
     font-size: 1.2em;
+}
+
+@media (width < 800px) {
+    #menu a {
+        white-space: wrap;
+    }
+
 }
 
 @media (width > 480px) {
